--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bundled-es-modules/axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
-    "react-toastify": "^10.0.3"
+    "react-toastify": "^10.0.3",
+    "redaxios": "^0.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
