--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "rollup-plugin-json": "^3.1.0",
+  "rollup-plugin-node-resolve": "^3.3.0", 
   "scripts": {
     "dev": "vite",
     "build": "vite build",
