--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "rollup-plugin-json": "^3.1.0",
-  "rollup-plugin-node-resolve": "^3.3.0", 
+  "rollup-plugin-node-resolve": "^3.3.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -17,7 +17,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "react-toastify": "^10.0.3",
-    "redaxios": "^0.5.1"
+    "redaxios": "^0.5.1",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
