--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-router-dom": "^6.21.2",
     "react-toastify": "^10.0.3",
     "redaxios": "^0.5.1",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "rollup-plugin-json": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
