--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "rollup-plugin-json": "^4.0.0"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
